  * grab-merge, syncpackage: Export DEB_VENDOR=Ubuntu when unpacking source
    packages. 3.0 (quilt) has optional per-vendor patch series.
  * pbuilder-dist:
    - Refactor to use subprocess.popen instead of os.system (LP: #398974)
    - Catch OSErrors when creating directories (LP: #671067)
    - Set HOME so pbuilder reads .pbuilderrc

  [ Benjamin Drung ]
  * wrap-and-sort: Remove duplicate items from sorted lists.
  * syncpackage: Fix error message for failed downloads.
  * sponsor-patch: Support building with sbuild (LP: #681242).

  [ Daniel Holbach ]
  * submittodebian: rephrase boilerplate text to be more polite, add reminder
    to explain the patch sufficiently and add necessary information.

  [ Colin Watson ]
  * submittodebian: Encourage sending multiple independent pieces of the
    Ubuntu patch in separate bug reports.

 -- Stefano Rivera <stefanor@ubuntu.com>  Thu, 02 Dec 2010 09:29:56 +0200

ubuntu-dev-tools (0.106) experimental; urgency=low

  [ Kees Cook ]
  * mk-sbuild: drop "priority" option; sbuild no longer uses it.

  [ Benjamin Drung ]
  * sponsor-patch: Call dpkg-source with --no-preparation to not apply patches
    if the packages uses the 3.0 (quilt) format.
  * debian/control: Use shorter addresses for VCS-* fields.

  [ Michael Bienia ]
  * pull-debian-source: Fix logical error in abort check (lp: #678072).

 -- Benjamin Drung <bdrung@ubuntu.com>  Sun, 21 Nov 2010 15:41:43 +0100

ubuntu-dev-tools (0.105) experimental; urgency=low

  [ Siegfried-Angel Gevatter Pujals ]
  * pbuilder-dist, doc/pbuilder-dist.1:
     - Export the distribution and architecture information to the environment
       so that it is available in pbuilderrc, etc. (LP: #628933).

  [ Naty Bidart ]
  * lp-project-upload: Add support handling multiple project series.

  [ Kees Cook ]
  * mk-sbuild: use --no-install-recommends on Debian too (Closes: #599699).

  [ Marco Rodrigues ]
  * pull-debian-source: